[gd_scene load_steps=7 format=3 uid="uid://b7gevtn5qptsv"]

[ext_resource type="Script" uid="uid://bh4ufu2qdvi4q" path="res://Player/player.gd" id="1_b3glx"]
[ext_resource type="Texture2D" uid="uid://c21d3yjscve62" path="res://icon.svg" id="1_xyoeh"]
[ext_resource type="PackedScene" uid="uid://dab77wqbob2cf" path="res://Player/Weapons/scythe.tscn" id="4_gwnis"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5lyl"]
size = Vector2(100, 80)

[sub_resource type="Animation" id="Animation_btcbx"]
resource_name = "move"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwnis"]
_data = {
&"move": SubResource("Animation_btcbx")
}

[node name="Player" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_b3glx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_c5lyl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_gwnis")
}

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.129412)
show_behind_parent = true
position = Vector2(0, 14.7)
scale = Vector2(0.6, 0.135938)
texture = ExtResource("1_xyoeh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -22)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_xyoeh")

[node name="CurrentLocationRayCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="LeftRaycast" type="RayCast2D" parent="."]
position = Vector2(-100, 0)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="RightRaycast" type="RayCast2D" parent="."]
position = Vector2(100, 0)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="UpRaycast" type="RayCast2D" parent="."]
position = Vector2(0, -80)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="DownRaycast" type="RayCast2D" parent="."]
position = Vector2(0, 80)
target_position = Vector2(0, 0)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="UseRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="Hand" type="Node2D" parent="."]
z_index = 10

[node name="Scythe" parent="Hand" instance=ExtResource("4_gwnis")]
